--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ nav .fas {
     display: none;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (min-width:768px) {
     .textbox h1 {
         font-size: 30px;
     }
